--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -662,16 +662,23 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse404.jpg">By Bizarre Hands</a> (1994)
 <li><a href="../CallOfDuty/CallOfDuty.html">Call Of Duty</a> (2016)
 <li><a href="Darkhorse64.jpg">Captain Midnight</a> (2013)
+<li><a href="Darkhorse406.jpg">Caravaggio</a> (2017)
 <li><a href="../CatalystComix/CatalystComix.html">Catalyst Comix</a> (2014)
 <li><a href="../Catalyst/Catalyst.html">Catalyst: Agents Of Change</a> (1994)
 <li><a href="../ChevalNoir/ChevalNoir.html">Cheval Noir</a> (1994)
 <li><a href="Darkhorse65.jpg">Chickenhare: Fire in The Hole</a> (2008)
 <li><a href="Darkhorse66.jpg">Chickenhare: The House Of Klaus</a> (2006)
 <li><a href="Darkhorse405.jpg">Chimichanga</a> (2011)
+<li><a href="Darkhorse407.jpg">Choke Gasp! The Best Of 75 Years Of EC Comics</a> (2019)
 <li><a href="Darkhorse67.jpg">Chosen</a> (2004)
 <li><a href="Darkhorse68.jpg">Chronowar</a> (1997)
+<li><a href="Darkhorse408.jpg">Chunchu</a> (2007)
+<li><a href="Darkhorse409.jpg">Citizen Rex</a> (2009)
 <li><a href="Darkhorse69.jpg">City Of Others</a> (2007)
 <li><a href="../ClassicStarWars/ClassicStarWars.html">Classic Star Wars</a> (1994)
+<li><a href="Darkhorse410.jpg">Cleaners</a> (2008)
+<li><a href="Darkhorse411.jpg">Clonezone</a> (1989)
+<li><a href="Darkhorse412.jpg">Clown Fatale</a> (2013)
 <li><a href="../Colder/Colder.html">Colder</a> (2013)
 <li><a href="Darkhorse354.jpg">Colonel Weird: Cosmagog</a> (2020)
 <li><a href="Darkhorse70.jpg">Colors in Black</a> (1995)
