--- a/LastGasp/LastGasp.html
+++ b/LastGasp/LastGasp.html
@@ -96,6 +96,10 @@
 <div class="mySlides" style="text-align: center;"><img src="LastGasp75.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp76.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LastGasp77.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp78.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp81.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LastGasp82.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -128,7 +132,6 @@ Comics:
 <li><a href="LastGasp39.jpg">Cannibal Romances</a> (1986)
 <li><a href="../Cherry/Cherry.html">Cherry Poptart</a> (1982)
 <li><a href="LastGasp8.jpg">Chocolate Alphabet</a> (1975)
-<li><a href="LastGasp79.jpg">Choke Gasp! Best 75 Years of EC Comics</a> (2019)
 <li><a href="../CocaineComix/CocaineComix.html">Cocaine Comix</a> (1975)
 <li><a href="LastGasp40.jpg">Commies From Mars</a> (1979)
 <li><a href="LastGasp9.jpg">Dirty Laundry</a> (1974)
