--- a/index.html
+++ b/index.html
@@ -18317,8 +18317,8 @@
 <tr>
 <td>Choke Gasp! Best 75 Years Of EC Comics</td>
 <td>2019</td>
-<td>Last Gasp</td>
-<td><a href="LastGasp/LastGasp.html">Details</a></td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
