--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -265,7 +265,8 @@ Previous Titles
 <li>Midnighter 	2007 	 	
 <li>Mister Miracle 	1971 	 	
 <li>Multiversity 	2014 	 	
-<li>New Gods 	1971 	 	
+<li>New Gods 	1971 	
+<li><a href="DC67.jpg">New York's World Fair Comics</a> (1939)
 <li>Nightwing 	2016 	 	
 <li>Omega Men 	1983 	 	
 <li>Orion 	2000 	 	
