--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -435,6 +435,22 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse403.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse404.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse405.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse406.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse407.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse408.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse409.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse410.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse411.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse412.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse413.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse414.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse415.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse416.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse417.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse418.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse419.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse420.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse421.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -665,6 +681,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse406.jpg">Caravaggio</a> (2017)
 <li><a href="../CatalystComix/CatalystComix.html">Catalyst Comix</a> (2014)
 <li><a href="../Catalyst/Catalyst.html">Catalyst: Agents Of Change</a> (1994)
+<li><a href="Darkhorse413.jpg">Channel Zero</a> (2012)
 <li><a href="../ChevalNoir/ChevalNoir.html">Cheval Noir</a> (1994)
 <li><a href="Darkhorse65.jpg">Chickenhare: Fire in The Hole</a> (2008)
 <li><a href="Darkhorse66.jpg">Chickenhare: The House Of Klaus</a> (2006)
@@ -679,14 +696,25 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse410.jpg">Cleaners</a> (2008)
 <li><a href="Darkhorse411.jpg">Clonezone</a> (1989)
 <li><a href="Darkhorse412.jpg">Clown Fatale</a> (2013)
+<li><a href="Darkhorse414.jpg">Clowns</a> (1998)
 <li><a href="../Colder/Colder.html">Colder</a> (2013)
 <li><a href="Darkhorse354.jpg">Colonel Weird: Cosmagog</a> (2020)
+<li><a href="Darkhorse415.jpg">Color Of Rage</a> (2008)
 <li><a href="Darkhorse70.jpg">Colors in Black</a> (1995)
+<li><a href="Darkhorse416.jpg">Colossal Conan</a> (2013)
+<li><a href="Darkhorse417.jpg">Columbus</a> (1992)
+<li><a href="Darkhorse418.jpg">Comic Book</a> (1996)
+<li><a href="Darkhorse419.jpg">Comics And Stories</a> (1996)
+<li><a href="Darkhorse420.jpg">Comics: An Illustrated History of Comic Strip Art</a> (2011)
 <li><a href="Darkhorse71.jpg">Comics' Greatest World</a> (1993)
-<li><a href="../Conan/Conan.html">Conan</a> (2008)
+<li><a href="Darkhorse421.jpg">Complete Elfquest</a> (2014)
+<li><a href="Darkhorse422.jpg">Complete K Chronicles</a> (2008)
+<li><a href="Darkhorse423.jpg">Complete Pip And Norton</a> (2002)
+<li><a href="../Conan/Conan.html">Conan</a> (2003)
 <li><a href="../Concrete/Concrete.html">Concrete</a> (1988)
 <li><a href="Darkhorse72.jpg">Cormac Mac Art</a> (1990)
 <li><a href="Darkhorse73.jpg">Corny's Fetish</a> (1998)
+<li><a href="Darkhorse424.jpg">Courageous Princess</a> (2007)
 <li><a href="Darkhorse74.jpg">Creatures Of The Night</a> (2004)
 <li><a href="Darkhorse75.jpg">Creepy Presents Alex Thoth</a> (2015)
 <li><a href="Darkhorse76.jpg">Creepy Presents Bernie Wrighton</a> (2011)
