--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -451,6 +451,35 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse419.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse420.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse421.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse422.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse423.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse424.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse425.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse426.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse427.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse428.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse429.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse430.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse431.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse432.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse433.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse434.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse435.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse436.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse437.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse438.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse439.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse440.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse441.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse442.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse443.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse444.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse445.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse446.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse447.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse448.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse449.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse450.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -715,42 +744,68 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse72.jpg">Cormac Mac Art</a> (1990)
 <li><a href="Darkhorse73.jpg">Corny's Fetish</a> (1998)
 <li><a href="Darkhorse424.jpg">Courageous Princess</a> (2007)
+<li><a href="Darkhorse425.jpg">Coutoo</a> (1994)
+<li><a href="Darkhorse426.jpg">Cravan</a> (2005)
 <li><a href="Darkhorse74.jpg">Creatures Of The Night</a> (2004)
+<li><a href="Darkhorse427.jpg">Creep</a> (2012)
+<li><a href="Darkhorse428.jpg">Creepy</a> (2009)
 <li><a href="Darkhorse75.jpg">Creepy Presents Alex Thoth</a> (2015)
 <li><a href="Darkhorse76.jpg">Creepy Presents Bernie Wrighton</a> (2011)
 <li><a href="Darkhorse77.jpg">Creepy Presents Richard Corben</a> (2012)
 <li><a href="Darkhorse78.jpg">Creepy Presents Steve Ditko</a> (2013)
 <li><a href="../CriminalMacabre/CriminalMacabre.html">Criminal Macabre</a> (2003)
 <li><a href="Darkhorse79.jpg">Critical Error</a> (1992)
+<li><a href="Darkhorse429.jpg">Critical Role: Vox Machina Origins</a> (2019)
 <li><a href="Darkhorse80.jpg">Cromwell Stone</a> (1992)
 <li><a href="Darkhorse81.jpg">Cross</a> (1996)
 <li><a href="Darkhorse82.jpg">Crush</a> (2004)
+<li><a href="Darkhorse430.jpg">Cryptocracy</a> (2016)
+<li><a href="Darkhorse431.jpg">Cud Comics</a> (1995)
+<li><a href="Darkhorse432.jpg">Cuphead</a> (2020)
 <li><a href="Darkhorse83.jpg">Curse Of Dracula</a> (1998)
+<li><a href="Darkhorse433.jpg">Cut</a> (2007)
 <li><a href="Darkhorse355.jpg">Cyberpunk 2077: Trauma Team</a> (2020)
 <li><a href="Darkhorse345.jpg">Dagar The Invincible</a> (2011)
 <li><a href="Darkhorse84.jpg">Damn Nation</a> (2005)
+<li><a href="Darkhorse434.jpg">Dance of Lifey Death</a> (1994)
 <li><a href="Darkhorse85.jpg">Danger Unlimited</a> (1994)
+<li><a href="Darkhorse435.jpg">Dare Detectives</a> (2004)
+<li><a href="Darkhorse436.jpg">Dark Ages</a> (2014)
 <li><a href="Darkhorse86.jpg">Dark Horse Book Of Hauntings</a> (2003) 
 <li><a href="Darkhorse87.jpg">Dark Horse Book Of Monsters</a> (2006)
 <li><a href="Darkhorse88.jpg">Dark Horse Book Of The Dead</a> (2005)
 <li><a href="Darkhorse89.jpg">Dark Horse Book Of Witchcraft</a> (2004)
-<li><a href="Darkhorse90.jpg">Dark Horse Classics</a> (1996)
+<li><a href="Darkhorse440.jpg">Dark Horse Classics: 20,000 Leagues Under The Sea</a> (1992)
+<li><a href="Darkhorse441.jpg">Dark Horse Classics: Godzilla</a> (1998)
+<li><a href="Darkhorse442.jpg">Dark Horse Classics: Last of the Mohicans</a> (1992)
+<li><a href="Darkhorse90.jpg">Dark Horse Classics: Predator Jungle Tales</a> (1996)
 <li><a href="Darkhorse91.jpg">Dark Horse Comics</a> (1994)
 <li><a href="Darkhorse92.jpg">Dark Horse Down Under</a> (1994)
 <li><a href="../DarkHorseInsider/DarkHorseInsider.html">Dark Horse Insider</a> (1992)
 <li><a href="Darkhorse93.jpg">Dark Horse Maverick 2000</a> (2000)
 <li><a href="Darkhorse94.jpg">Dark Horse Maverick 2001</a> (2001)
 <li><a href="Darkhorse95.jpg">Dark Horse Monsters</a> (1997)
+<li><a href="Darkhorse443.jpg">Dark Horse New Recruits</a> (1992)
 <li><a href="Darkhorse96.jpg">Dark Horse Presents</a>  (1986)
 <li><a href="Darkhorse97.jpg">Dark Horse Presents Annual</a> (1998)
 <li><a href="Darkhorse98.jpg">Dark Horse Presents Fifth Anniversary Special</a> (1991)
 <li><a href="Darkhorse99.jpg">Dark Horse Twenty Years</a> (2006) 
+<li><a href="Darkhorse444.jpg">Dark Matter</a> (2012)
 <li><a href="Darkhorse100.jpg">Darkness Falls, The Tragic Life Of Matilda Dixon</a> (2003) 
 <li><a href="Darkhorse101.jpg">Dead in The West</a> (1994)
+<li><a href="Darkhorse445.jpg">Dead Inside</a> (2016)
 <li><a href="Darkhorse102.jpg">Dead or Alive – A Cyberpunk Western</a> (1998)
+<li><a href="Darkhorse446.jpg">Dead Rider</a> (2016)
+<li><a href="Darkhorse447.jpg">Dead To Rights</a> (2016)
+<li><a href="Darkhorse448.jpg">Dead Vengeance</a> (2015)
+<li><a href="Darkhorse449.jpg">Deadface: Doing the Islands with Bacchus</a> (1991)
 <li><a href="Darkhorse103.jpg">Deadlander</a> (2007)
 <li><a href="Darkhorse104.jpg">Deadline USA</a> (1992)
+<li><a href="Darkhorse450.jpg">Death Head</a> (2016)
+<li><a href="Darkhorse451.jpg">Death Orb</a> (2018)
 <li><a href="Darkhorse105.jpg">Decade Of Dark Horse</a> (1996)
+<li><a href="Darkhorse452.jpg">Decapitator</a> (1998)
+<li><a href="Darkhorse453.jpg">Deep Gravity</a> (2014)
 <li><a href="../DeptH/DeptH.html">Dept H</a> (2016)
 <li><a href="Darkhorse106.jpg">Devil's Footprints</a> (2003)
 <li><a href="Darkhorse107.jpg">Diablo: Tales Of Sanctuary</a> (2001)
@@ -798,8 +853,8 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse135.jpg">Ghost in The Shell</a> (1995)
 <li><a href="Darkhorse136.jpg">Gigantic</a> (2017)
 <li><a href="Darkhorse137.jpg">Girl Crazy</a> (1996)
-<li><a href="..GiveMeLiberty/GiveMeLiberty.html">Give Me Liberty</a> (1991)
-<li><a href="..GoBoy7/GoBoy7.html">Go Boy 7</a> (2004)
+<li><a href="../GiveMeLiberty/GiveMeLiberty.html">Give Me Liberty</a> (1991)
+<li><a href="../GoBoy7/GoBoy7.html">Go Boy 7</a> (2004)
 <li><a href="Darkhorse138.jpg">God Of War</a> (2019)
 <li><a href="Darkhorse139.jpg">Godzilla</a>  (1989)
 <li><a href="../Goon/Goon.html">Goon</a> (2003)
@@ -888,7 +943,12 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../ManWithTheScreamingBrain/ManWithTheScreamingBrain.html">Man with The Screaming Brain</a> (2005)
 <li><a href="Darkhorse189.jpg">Mark</a> (1987)
 <li><a href="Darkhorse190.jpg">Marshal Law</a> (1992)
-<li><a href="Darkhorse191.jpg">Martha Washington Dies</a> (2007)
+<li><a href="Darkhorse191.jpg">Martha Washington: Dies</a> (2007)
+<li><a href="../GiveMeLiberty/GiveMeLiberty.html">Martha Washington: Give Me Liberty</a> (1991)
+<li><a href="Darkhorse437.jpg">Martha Washington: Goes To War</a> (1994)
+<li><a href="Darkhorse147.jpg">Martha Washington: Happy Birthday</a> (1995)
+<li><a href="Darkhorse439.jpg">Martha Washington: Saves The World</a> (1997)
+<li><a href="Darkhorse438.jpg">Martha Washington: Stranded In Space</a> (1995)
 <li><a href="../Mask/Mask.html">Mask</a> (1991)
 <li><a href="Darkhorse192.jpg">Mass Effect</a> (2013)
 <li><a href="../Massive/Massive.html">Massive</a> (2014)
