--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -480,6 +480,17 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse448.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse449.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse450.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse451.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse452.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse453.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse454.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse455.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse456.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse457.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse458.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse459.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse460.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse461.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -806,7 +817,9 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse105.jpg">Decade Of Dark Horse</a> (1996)
 <li><a href="Darkhorse452.jpg">Decapitator</a> (1998)
 <li><a href="Darkhorse453.jpg">Deep Gravity</a> (2014)
+<li><a href="Darkhorse454.jpg">Deep Sea</a> (2013)
 <li><a href="../DeptH/DeptH.html">Dept H</a> (2016)
+<li><a href="Darkhorse455.jpg">Devil</a> (2010)
 <li><a href="Darkhorse106.jpg">Devil's Footprints</a> (2003)
 <li><a href="Darkhorse107.jpg">Diablo: Tales Of Sanctuary</a> (2001)
 <li><a href="Darkhorse108.jpg">Digimon Digital Monsters</a> (2000)
@@ -814,12 +827,18 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse110.jpg">Division 13</a> (1995)
 <li><a href="Darkhorse111.jpg">Doc Savage: Curse Of The Fire God</a> (1995)
 <li><a href="../DocStearnMrMonster/DocStearnMrMonster.html">Doc Stearn...Mr. Monster</a> (1988)
+<li><a href="Darkhorse456.jpg">Doctor Solar, Man of the Atom</a> (2004)
 <li><a href="../Dollhouse/Dollhouse.html">Dollhouse</a> (2010)
 <li><a href="Darkhorse112.jpg">Dominion</a> (1993)
 <li><a href="../Domu/Domu.html">Domu: A Child's Dream</a> (1995)
+<li><a href="Darkhorse457.jpg">Don Martin's Droll Book</a> (1992)
 <li><a href="../DOTA2/DOTA2.html">DOTA 2</a> (2017)
+<li><a href="Darkhorse458.jpg">Dotter Of Her Father's Eyes</a> (2012)
 <li><a href="../DrGiggles/DrGiggles.html">Dr. Giggles</a> (1992)
+<li><a href="Darkhorse459.jpg">Dr. Grordbort Presents: Victory</a> (2009)
+<li><a href="Darkhorse460.jpg">Dr. Horrible</a> (2009)
 <li><a href="Darkhorse113.jpg">Dr. Robot Special</a> (2000)
+<li><a href="Darkhorse461.jpg">Dragon Age</a> (2015)
 <li><a href="Darkhorse114.jpg">Drawing on Your Nightmares</a> (2003)
 <li><a href="Darkhorse115.jpg">Edgar Rice Burroughs' Jungle Tales Of Tarzan</a> (2015)
 <li><a href="Darkhorse116.jpg">Edgar Rice Burroughs' Tarzan: A Tale Of Mugambi</a> (1995)
