--- a/index.html
+++ b/index.html
@@ -58837,6 +58837,13 @@
 </tr>
 
 <tr>
+<td>Peter Deligdisch</td>
+<td>1990</td>
+<td>Creator</td>
+<td><a href="PeterDeligdisch/PeterDeligdisch.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Peter Panzerfaust</td>
 <td>2013</td>
 <td>Image</td>
