--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -812,6 +812,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse449.jpg">Deadface: Doing the Islands with Bacchus</a> (1991)
 <li><a href="Darkhorse103.jpg">Deadlander</a> (2007)
 <li><a href="Darkhorse104.jpg">Deadline USA</a> (1992)
+<li><a href="Darkhorse462.jpg">Deadlock</a> (2009)
 <li><a href="Darkhorse450.jpg">Death Head</a> (2016)
 <li><a href="Darkhorse451.jpg">Death Orb</a> (2018)
 <li><a href="Darkhorse105.jpg">Decade Of Dark Horse</a> (1996)
@@ -819,6 +820,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse453.jpg">Deep Gravity</a> (2014)
 <li><a href="Darkhorse454.jpg">Deep Sea</a> (2013)
 <li><a href="../DeptH/DeptH.html">Dept H</a> (2016)
+<li><a href="Darkhorse463.jpg">Dethklok</a> (2010)
 <li><a href="Darkhorse455.jpg">Devil</a> (2010)
 <li><a href="Darkhorse106.jpg">Devil's Footprints</a> (2003)
 <li><a href="Darkhorse107.jpg">Diablo: Tales Of Sanctuary</a> (2001)
@@ -830,6 +832,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse456.jpg">Doctor Solar, Man of the Atom</a> (2004)
 <li><a href="../Dollhouse/Dollhouse.html">Dollhouse</a> (2010)
 <li><a href="Darkhorse112.jpg">Dominion</a> (1993)
+<li><a href="Darkhorse464.jpg">Domovoi</a> (2013)
 <li><a href="../Domu/Domu.html">Domu: A Child's Dream</a> (1995)
 <li><a href="Darkhorse457.jpg">Don Martin's Droll Book</a> (1992)
 <li><a href="../DOTA2/DOTA2.html">DOTA 2</a> (2017)
@@ -839,11 +842,18 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse460.jpg">Dr. Horrible</a> (2009)
 <li><a href="Darkhorse113.jpg">Dr. Robot Special</a> (2000)
 <li><a href="Darkhorse461.jpg">Dragon Age</a> (2015)
+<li><a href="Darkhorse465.jpg">Dragonero</a> (2009)
+<li><a href="Darkhorse466.jpg">Drakuun</a> (1997)
 <li><a href="Darkhorse114.jpg">Drawing on Your Nightmares</a> (2003)
+<li><a href="Darkhorse467.jpg">Dream Gang</a> (2016)
+<li><a href="Darkhorse468.jpg">Dream Thief</a> (2013)
+<li><a href="Darkhorse469.jpg">Duckman</a> (1990)
+<li><a href="Darkhorse470.jpg">Dylan Dog</a> (1999)
 <li><a href="Darkhorse115.jpg">Edgar Rice Burroughs' Jungle Tales Of Tarzan</a> (2015)
 <li><a href="Darkhorse116.jpg">Edgar Rice Burroughs' Tarzan: A Tale Of Mugambi</a> (1995)
 <li><a href="Darkhorse117.jpg">Edgar Rice Burroughs' Tarzan: The Lost Adventure</a> (1995)
 <li><a href="Darkhorse118.jpg">Edgar Rice Burroughs' The Return Of Tarzan</a> (1997)
+<li><a href="../ECArchives/ECArchives.html">EC Archives</a> (2006)
 <li><a href="../ElZomboFantasma/ElZomboFantasma.html">El Zombo Fantasma</a> (2004)
 <li><a href="Darkhorse119.jpg">Elric: Stormbringer</a> (1997)
 <li><a href="../EmilyTheStrange/EmilyTheStrange.html">Emily Strange</a> (2010)
@@ -857,7 +867,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse123.jpg">Fierce</a> (2004)
 <li><a href="../FifthBeatle/FifthBeatle.html">Fifth Beatle</a> (2013)
 <li><a href="../FlamingCarrot/FlamingCarrot.html">Flaming Carrot Comics</a> (1994)
-<li><a href="Darkhorse124.jpg">Flaming Carrot &amp;Reid Fleming, World's Toughest Milkman</a> (2002)
+<li><a href="Darkhorse124.jpg">Flaming Carrot &amp; Reid Fleming, World's Toughest Milkman</a> (2002)
 <li><a href="Darkhorse125.jpg">Floaters</a> (1994)
 <li><a href="Darkhorse126.jpg">Foot Soldiers</a> (1996)
 <li><a href="Darkhorse127.jpg">Fort: Prophet Of The Unexplained</a> (2002)
