--- a/index.html
+++ b/index.html
@@ -27702,6 +27702,13 @@
 </tr>
 
 <tr>
+<td>EC Archives</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="ECArchives/ECArchives.html">Details</a></td>
+</tr>
+
+<tr>
 <td>EC Artists</td>
 <td>2013</td>
 <td>Fantagraphics</td>
