--- a/ChrisWare/ChrisWare.html
+++ b/ChrisWare/ChrisWare.html
@@ -25,6 +25,12 @@
 <div class="mySlides" style="text-align: center;"><img src="ChrisWare04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChrisWare05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChrisWare06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisWare07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisWare08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisWare09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisWare10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisWare11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChrisWare12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
