--- a/PeterBagge/PeterBagge.html
+++ b/PeterBagge/PeterBagge.html
@@ -89,6 +89,7 @@
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge68.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge69.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PeterBagge70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PeterBagge71.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -119,6 +120,7 @@ Titles
 <li><a href="PeterBagge27.jpg">Buddy's Got Three Moms</a> (1999)
 <li><a href="PeterBagge39.jpg">Credo: The Rose Wilder Lane Story (2019)
 <li><a href="PeterBagge11.jpg">Everyone Is Stupid Except for Me and Other Astute Observations</a> (2009)
+<li><a href="PeterBagge71.jpg">Fatima: The Blood Spinners</a> (2012)
 <li><a href="PeterBagge40.jpg">Fire!!: The Zora Neale Hurston Story</a> (2017)
 <li><a href="PeterBagge46.jpg">Founding Fathers Funnies</a> (2016)
 <li><a href="PeterBagge30.jpg">Fun with Buddy + Lisa</a> (1995)
