--- a/JimWoodring/JimWoodring.html
+++ b/JimWoodring/JimWoodring.html
@@ -25,6 +25,20 @@
 <div class="mySlides" style="text-align: center;"><img src="JimWoodring6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JimWoodring7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JimWoodring8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimWoodring22.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
