--- a/index.html
+++ b/index.html
@@ -14151,6 +14151,13 @@
 </tr>
 
 <tr>
+<td>Boris Artzybasheff</td>
+<td>1899</td>
+<td>Creator</td>
+<td><a href="BorisArtzybasheff/BorisArtzybasheff.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Boris Karloff's Tales Of Mystery</td>
 <td>1963</td>
 <td>Gold Key</td>
